--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,6 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remmapings = ["@openzeppelin/contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts"]
-
+remmapings = ["@openzeppelin/contracts=lib/openzeppelin-contracts","@openzeppelin/contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts"]
+ffi = true
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
